--- a/exercises/ex1/ex1.1/_i18n/i18n.properties
+++ b/exercises/ex1/ex1.1/_i18n/i18n.properties
@@ -32,5 +32,5 @@ Message=Message
 #XFLD,120: Label for a column title
 Date=Date
 
-ADDED: #XFLD: Label for assigned user field
+#XFLD,121: ✅ Label for assigned user field
 AssignedTo=Assigned To
